[package]
edition = "2018"
name = "meshx-p2p-pf"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1"
tokio = {version = "1.9", features = ["full"]}

async-trait = "0.1"
env_logger = "0.9"
futures = "0.3"
libp2p = {version = "0.39"}
log = "0.4"
rand = "0.8"
void ="1"